--- a/app/src/main/res/layout/activity_add_book.xml
+++ b/app/src/main/res/layout/activity_add_book.xml
@@ -10,6 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:orientation="horizontal"
         android:weightSum="1">
 
@@ -18,6 +19,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".9"
+            android:fontFamily="sans-serif-condensed"
             android:hint="@string/enter_isbn" />
 
         <android.support.v7.widget.AppCompatImageView
@@ -34,15 +36,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        app:cardBackgroundColor="@color/colorAccent"
+        android:elevation="10dp"
+        app:cardBackgroundColor="@color/secondaryColor"
         app:cardCornerRadius="10dp">
 
         <android.support.v7.widget.AppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:fontFamily="sans-serif-condensed"
             android:padding="10dp"
-            android:text="Add Book" />
+            android:text="ADD BOOK"
+            android:textColor="@android:color/white"
+            android:textStyle="bold" />
 
     </android.support.v7.widget.CardView>
 
@@ -50,13 +56,16 @@
         android:id="@+id/bookDetails"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_margin="10dp"
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <android.support.v7.widget.AppCompatTextView
             android:id="@+id/textTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
+            android:fontFamily="sans-serif-condensed"
             android:text="Title"
             android:textAlignment="viewStart" />
 
@@ -65,6 +74,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
+            android:fontFamily="sans-serif-condensed"
             android:text="Author"
             android:textAlignment="viewStart" />
 
