--- a/app/src/main/res/layout/layout_book_item.xml
+++ b/app/src/main/res/layout/layout_book_item.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="25dp"
+    android:layout_marginEnd="25dp"
+    android:layout_marginStart="25dp"
+    android:layout_marginTop="25dp"
     android:background="@android:color/white"
     android:elevation="4dp"
     tools:style="@style/CardView">
@@ -15,7 +17,7 @@
 
         <ImageView
             android:id="@+id/book_cover"
-            android:layout_width="wrap_content"
+            android:layout_width="155dp"
             android:layout_height="195dp"
             android:contentDescription="Book Cover Image"
             android:scaleType="centerCrop"
