--- a/app/src/main/res/layout/activity_add_book.xml
+++ b/app/src/main/res/layout/activity_add_book.xml
@@ -8,7 +8,7 @@
     tools:context=".activity.AddBookActivity">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/app_toolbar"
+        android:id="@+id/app_toolbar_add_book"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/primaryColor"
