--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,10 +7,12 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:layout_margin="10dp"
         android:fontFamily="sans-serif-condensed"
         android:text="RECOMMENDATIONS WILL SHOW UP HERE"
+        android:textAlignment="center"
         android:textSize="20sp"
         android:textStyle="bold" />
 
