--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -12,7 +12,7 @@
         android:layout_height="96dp"
         android:layout_gravity="center"
         android:layout_margin="20dp"
-        android:src="@drawable/ic_person_black_24dp" />
+        android:src="@drawable/ic_person" />
 
     <TextView
         android:id="@+id/profile_name"
