--- a/app/src/main/res/layout/layout_book_item.xml
+++ b/app/src/main/res/layout/layout_book_item.xml
@@ -17,11 +17,11 @@
 
         <ImageView
             android:id="@+id/book_cover"
-            android:layout_width="155dp"
+            android:layout_width="165dp"
             android:layout_height="195dp"
             android:contentDescription="Book Cover Image"
-            android:scaleType="centerCrop"
-            android:src="@drawable/book_cover" />
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_book_placeholder" />
 
         <TextView
             android:id="@+id/book_name"
@@ -29,6 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:fontFamily="sans-serif-condensed"
+            android:singleLine="true"
             android:text="Hamlet"
             android:textSize="14sp" />
 
