--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -3,22 +3,22 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/ic_home"
         android:title="@string/home" />
 
     <item
         android:id="@+id/navigation_library"
-        android:icon="@drawable/ic_book_black_24dp"
+        android:icon="@drawable/ic_book"
         android:title="@string/library" />
 
     <item
         android:id="@+id/navigation_review"
-        android:icon="@drawable/ic_rate_review_black_24dp"
+        android:icon="@drawable/ic_rate"
         android:title="@string/review" />
 
     <item
         android:id="@+id/navigation_profile"
-        android:icon="@drawable/ic_account_circle_black_24dp"
+        android:icon="@drawable/ic_account_circle"
         android:title="@string/profile" />
 
 </menu>
