--- a/app/src/main/res/layout/activity_view_book.xml
+++ b/app/src/main/res/layout/activity_view_book.xml
@@ -10,7 +10,7 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/app_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="48dp"
         android:background="@color/primaryColor"
         android:elevation="4dp"
         android:theme="@style/LightOverflow"
@@ -86,99 +86,131 @@
                 android:stepSize=".5"
                 android:visibility="gone" />
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/bookLang"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="5dp"
-                    android:fontFamily="sans-serif-condensed"
-                    android:text="English"
-                    android:textAlignment="center"
-                    android:textColor="@color/primaryColor"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/bookPageCount"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="5dp"
-                    android:fontFamily="sans-serif-condensed"
-                    android:text="200"
-                    android:textAlignment="center"
-                    android:textColor="@color/primaryColor"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
+            <com.github.zagum.expandicon.ExpandIconView
+                android:id="@+id/expand_book_data"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_gravity="center" />
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:id="@+id/book_data_extra"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:orientation="horizontal">
+                android:orientation="vertical"
+                android:visibility="gone">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/bookLang"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="5dp"
+                        android:fontFamily="sans-serif-condensed"
+                        android:text="English"
+                        android:textAlignment="center"
+                        android:textColor="@color/primaryColor"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/bookPageCount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="5dp"
+                        android:fontFamily="sans-serif-condensed"
+                        android:text="200"
+                        android:textAlignment="center"
+                        android:textColor="@color/primaryColor"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/bookPublisher"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="5dp"
+                        android:fontFamily="sans-serif-condensed"
+                        android:text="Publisher"
+                        android:textAlignment="center"
+                        android:textColor="@color/primaryColor"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/bookPublishedDate"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="5dp"
+                        android:fontFamily="sans-serif-condensed"
+                        android:text="12-02-2014"
+                        android:textAlignment="center"
+                        android:textColor="@color/primaryColor"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
 
                 <TextView
-                    android:id="@+id/bookPublisher"
+                    android:id="@+id/bookCategory"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_margin="5dp"
                     android:fontFamily="sans-serif-condensed"
-                    android:text="Publisher"
+                    android:text="Thriller"
                     android:textAlignment="center"
                     android:textColor="@color/primaryColor"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/bookPublishedDate"
+                    android:id="@+id/bookDesc"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="5dp"
+                    android:layout_marginBottom="10dp"
                     android:fontFamily="sans-serif-condensed"
-                    android:text="12-02-2014"
+                    android:text="Lorem ipsum ajkhajkls jkahldjklaj ljahdjklahsjdas das kjashdkjlahd lkajhsdlka djaslkh asljdhaskljdhasl kdjashd lkjasdh haskjldhasjkld askjdhaslkjd as"
                     android:textAlignment="center"
                     android:textColor="@color/primaryColor"
-                    android:textSize="16sp"
+                    android:textSize="14sp"
                     android:textStyle="bold" />
 
             </LinearLayout>
 
             <TextView
-                android:id="@+id/bookCategory"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="5dp"
-                android:fontFamily="sans-serif-condensed"
-                android:text="Thriller"
+                android:text="Current owners of this book"
                 android:textAlignment="center"
-                android:textColor="@color/primaryColor"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                android:textColor="@color/primaryColor" />
 
-            <TextView
-                android:id="@+id/bookDesc"
-                android:layout_width="wrap_content"
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/ownerRecycler"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginBottom="10dp"
-                android:fontFamily="sans-serif-condensed"
-                android:text="Lorem ipsum ajkhajkls jkahldjklaj ljahdjklahsjdas das kjashdkjlahd lkajhsdlka djaslkh asljdhaskljdhasl kdjashd lkjasdh haskjldhasjkld askjdhaslkjd as"
-                android:textAlignment="center"
-                android:textColor="@color/primaryColor"
-                android:textSize="14sp"
-                android:textStyle="bold" />
+                android:nestedScrollingEnabled="false">
+
+            </android.support.v7.widget.RecyclerView>
 
         </LinearLayout>
 
