--- a/app/src/main/res/layout/layout_book_owner.xml
+++ b/app/src/main/res/layout/layout_book_owner.xml
@@ -1,20 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/book_owner_card"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    app:cardCornerRadius="30dp">
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/book_owner_label"
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:padding="20dp"
-        android:text="Ayush Singh"
-        android:textAlignment="center"
-        android:textColor="@color/primaryColor" />
+        android:layout_margin="10dp"
+        app:cardCornerRadius="30dp">
 
-</android.support.v7.widget.CardView>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/book_owner_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="10dp"
+                android:text="Ayush Singh"
+                android:textAlignment="center"
+                android:textColor="@color/primaryColor" />
+
+            <TextView
+                android:id="@+id/book_owner_rating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:paddingBottom="10dp"
+                android:text="3.5/5.0"
+                android:textAlignment="center"
+                android:textColor="@color/primaryColor" />
+
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+
+</LinearLayout>
