--- a/app/src/main/res/layout/activity_view_book.xml
+++ b/app/src/main/res/layout/activity_view_book.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.andro.swap.activity.ViewBook">
+    tools:context="com.andro.swap.activity.ViewBookActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/app_toolbar"
