--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -13,8 +13,8 @@
 
     <item
         android:id="@+id/navigation_review"
-        android:icon="@drawable/ic_rate"
-        android:title="@string/review" />
+        android:icon="@drawable/ic_message_black"
+        android:title="@string/chat" />
 
     <item
         android:id="@+id/navigation_profile"
