--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,7 +12,7 @@
         android:layout_centerVertical="true"
         android:layout_margin="10dp"
         android:fontFamily="sans-serif-condensed"
-        android:text="RECOMMENDATIONS WILL SHOW UP HERE"
+        android:text="YOUR RECOMMENDATIONS WILL SHOW UP HERE"
         android:textAlignment="center"
         android:textSize="20sp"
         android:textStyle="bold" />
