--- a/app/src/main/res/layout/activity_view_profile.xml
+++ b/app/src/main/res/layout/activity_view_profile.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     tools:context=".activity.ViewProfile">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/app_toolbar"
         android:layout_width="match_parent"
         android:layout_height="48dp"
@@ -27,7 +27,7 @@
             android:textSize="24sp"
             android:textStyle="bold" />
 
-    </android.support.v7.widget.Toolbar>
+    </androidx.appcompat.widget.Toolbar>
 
     <TextView
         android:id="@+id/user_name_profile"
@@ -70,7 +70,7 @@
         android:textSize="20sp"
         android:textStyle="bold" />
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/library_profile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
